--- a/build.gradle
+++ b/build.gradle
@@ -39,4 +39,7 @@ repositories {
 dependencies {
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
     implementation("org.jetbrains.kotlin:kotlin-reflect")
+
+    implementation('io.rsocket:rsocket-core:0.11.5')
+    implementation('io.rsocket:rsocket-transport-netty:0.11.5')
 }
