--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,7 @@ version = "1.0-SNAPSHOT"
 
 buildscript {
     ext {
-        kotlinVersion = '1.2.70'
-        springBootVersion = '2.1.0.RELEASE'
+        kotlinVersion = '1.3.10'
     }
     repositories {
         mavenCentral()
@@ -18,6 +17,16 @@ buildscript {
 
 apply plugin: 'kotlin'
 apply plugin: 'eclipse'
+
+apply plugin: 'idea'
+
+idea{
+    module{
+        inheritOutputDirs = false
+        outputDir = compileKotlin.destinationDir
+        testOutputDir = compileTestKotlin.destinationDir
+    }
+}
 
 compileKotlin {
     kotlinOptions {
