--- a/build.gradle
+++ b/build.gradle
@@ -49,10 +49,13 @@ dependencies {
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
     implementation("org.jetbrains.kotlin:kotlin-reflect")
 
-    implementation('io.rsocket:rsocket-core:0.11.5')
-    implementation('io.rsocket:rsocket-transport-netty:0.11.5')
+    implementation("io.rsocket:rsocket-core:0.11.5")
+    implementation("io.rsocket:rsocket-transport-netty:0.11.5")
 
-    implementation('com.squareup.moshi:moshi-kotlin:1.8.0')
+    implementation("com.squareup.moshi:moshi-kotlin:1.8.0")
 
-    implementation('com.github.zafarkhaja:java-semver:0.9.0')
+    implementation("com.github.zafarkhaja:java-semver:0.9.0")
+
+    testImplementation("junit:junit:4.12")
+    testImplementation("org.jetbrains.kotlin:kotlin-test:1.1.51")
 }
